--- a/gradle.properties
+++ b/gradle.properties
@@ -54,6 +54,8 @@ activationVersion=1.2.1
 
 annotationsVersion=15.0
 
+#apacheTomcatVersion=7.0.93
+
 #Unifying version used by DISCVR and Premium
 apacheDirectoryVersion=1.0.2
 #Transitive dependency of Apache directory: 2.0.18 contains some regressions
