Audit log code builds and passes unit tests. Merging it into the trunk to make sure it is migrated to GitHub correctly.
SVN r63518 |2019-04-30 17:31:40 +0000

--- a/settings.gradle
+++ b/settings.gradle
@@ -99,6 +99,15 @@ else
     //                                         ":server:customModules:ehr",
     //                                         ":server:customModules:onprc_ehr"])
 
+    BuildUtils.includeModules(this.settings, [":server:customModules:targetedms"])
+    //BuildUtils.includeModules(this.settings, [":server:customModules:lincs"])
+
+    //BuildUtils.includeModules(this.settings, [":externalModules:maccoss:passport"])
+    //BuildUtils.includeModules(this.settings, [":externalModules:maccoss:testresults"])
+    //BuildUtils.includeModules(this.settings, [":externalModules:maccoss:signup"])
+    BuildUtils.includeModules(this.settings, [":externalModules:maccoss:SkylineToolStore"])
+
+
     // The line below is an example of how to include a single module
     //include ":server:optionalModules:workflow"
 }
