--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -18,7 +18,7 @@ databaseVersion=9.1
 jdbcDriverClassName=org.postgresql.Driver
 jdbcURL=jdbc:postgresql://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=postgres
-jdbcPassword=sasa
+jdbcPassword=lclcmsms
 
 # key for the encrypted property store
 masterEncryptionKey=defaultKey
