Use updated syntax for applying core plugins (and add java-library plugin to get api and implementation configurations)
SVN r63574 |2019-05-06 01:49:15 +0000

--- a/server/bootstrap/build.gradle
+++ b/server/bootstrap/build.gradle
@@ -1,7 +1,10 @@
-apply plugin: 'java'
+plugins {
+    id 'java'
+    id 'java-library'
+    id 'maven'
+    id 'maven-publish'
+}
 apply plugin: 'org.labkey.serverBootstrap'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
 
 
 import org.labkey.gradle.task.PomFile
