Back out use of java-library in favor of creating own api configuration for now (java-library somehow causes issues with test compilation)
SVN r63577 |2019-05-06 16:03:52 +0000

--- a/server/bootstrap/build.gradle
+++ b/server/bootstrap/build.gradle
@@ -1,11 +1,14 @@
 plugins {
     id 'java'
-    id 'java-library'
+ //   id 'java-library'
     id 'maven'
     id 'maven-publish'
 }
 apply plugin: 'org.labkey.serverBootstrap'
 
+project.configurations {
+    api.extendsFrom(compile)
+}
 
 import org.labkey.gradle.task.PomFile
 import org.labkey.gradle.util.BuildUtils
