--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,10 @@
 # in the context URL or you will get a 500 error from artifactory.)
 artifactory_contextUrl=https://artifactory.labkey.com/artifactory
 
-# The source and target versions of Java for compilation tasks @JavaRuntimeVersion
-sourceCompatibility=11
-targetCompatibility=11
+# The source and target versions of Java for compilation tasks
+# @JavaRuntimeVersion
+sourceCompatibility=12
+targetCompatibility=12
 
 # indicates if we should use previously published artifacts or build from source
 # This setting applies to all projects unless overridden on command line or in a
