--- a/gradle.properties
+++ b/gradle.properties
@@ -55,7 +55,7 @@ activationVersion=1.2.1
 
 annotationsVersion=15.0
 
-#apacheTomcatVersion=7.0.93
+apacheTomcatVersion=7.0.94
 
 #Unifying version used by DISCVR and Premium
 apacheDirectoryVersion=1.0.2
