--- a/gradle.properties
+++ b/gradle.properties
@@ -31,13 +31,17 @@ versioningPluginVersion=1.0.2
 
 # Versions of node and npm to use during the build.  If set, these versions
 # will be downloaded and used.  If not set, the existing local installations will be used.
-npmVersion=5.6.0
-nodeVersion=8.11.3
+# The version of npm corresponds to the given version of node
+npmVersion=6.9.0
+nodeVersion=10.16.0
 nodeRepo=https://nodejs.org/dist
 # Directory in a project's build directory where the node binary will be placed
 nodeWorkDirectory=.node
 # Directory in a project's build directory where the npm binary will be placed
 npmWorkDirectory=.node
+#yarnVersion=1.16.0
+# Directory in a project's build directory where the yarn binary will be placed
+#yarnWorkDirectory=.node
 
 # uncomment the line below to include version number info in build artifacts
 # Generally you don't need or want to do this when developing.
