Update external.gradle to not include EHR modules
SVN r64244 |2019-07-29 23:35:45 +0000

--- a/gradle/settings/external.gradle
+++ b/gradle/settings/external.gradle
@@ -20,11 +20,13 @@ buildscript {
     }
 }
 
-// EHR has most of externalModules already, plus their dependencies
-apply from: 'ehr.gradle'
+// Start with community modules
+apply from: 'community.gradle'
 
 import org.labkey.gradle.util.BuildUtils
 
 // Just need to add the scharp modules
-BuildUtils.includeModules(this.settings, rootDir, ["externalModules/scharp"], ["test"]);
+BuildUtils.includeModules(this.settings, rootDir, ["externalModules"], [], true);
 
+// Some externalModules have premium dependency
+include ":server:optionalModules:dataintegration"
