Issue 38298: Errors when indexing .7z files in search - Added dependency for XZ and a test .7z file to sampledata
SVN r64387 |2019-08-28 18:57:15 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -87,6 +87,7 @@ commonsCodecVersion=1.10
 commonsBeanutilsVersion=1.7.0
 # sync with version Tika ships
 commonsCompressVersion=1.18
+tukaaniXZversion=1.8
 commonsDbcpVersion=1.4
 commonsDiscoveryVersion=0.2
 commonsDigesterVersion=1.8.1
