Issue 38298: Errors when indexing .7z files in search - Updating parameter casing - Updating sample file names to match pattern
SVN r64403 |2019-08-30 19:19:56 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -87,7 +87,6 @@ commonsCodecVersion=1.10
 commonsBeanutilsVersion=1.7.0
 # sync with version Tika ships
 commonsCompressVersion=1.18
-tukaaniXZversion=1.8
 commonsDbcpVersion=1.4
 commonsDiscoveryVersion=0.2
 commonsDigesterVersion=1.8.1
@@ -213,6 +212,7 @@ thumbnailatorVersion=0.4.8
 
 # used for tika-core in API and tika-app in search
 tikaVersion=1.19.1
+tukaaniXZVersion=1.8
 
 validationApiVersion=1.1.0.Final
 
