Fix dependency XZ version conflict by forcing parameter version
SVN r64447 |2019-09-06 19:18:24 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -188,6 +188,8 @@ allprojects {
                     force "xalan:xalan:${xalanVersion}"
                     // genotyping brings in a much older version of this, so we force a newer version for compatibility
                     force "org.apache.commons:commons-compress:${commonsCompressVersion}"
+                    // Transitive dependency of commons-compress -- Transitive dependency com.github.samtools:htsjdk:2.14.3 uses much older version
+                    force "org.tukaani:xz:${tukaaniXZVersion}"
                     // force version for api, LDK, pipeline, query, saml, but not for the xsdDoc configuration, which requires
                     // an older version for the docflex library we use
                     if (!config.name.equals('xsdDoc'))
