--- a/gradle.properties
+++ b/gradle.properties
@@ -140,6 +140,8 @@ jacksonJaxrsBaseVersion=2.9.5
 
 jamaVersion=1.0.2
 
+javassistVersion=3.20.0-GA
+
 javaMailVersion=1.6.3
 
 # No longer part of Java 10. Dependency for NIHS and OpenEMPI.
@@ -168,6 +170,8 @@ jxlVersion=2.6.3
 kaptchaVersion=2.3
 
 log4jVersion=1.2.17
+
+logbackVersion=1.1.1
 
 mysqlDriverVersion=8.0.13
 
