Exclude SVN versions of labModules if Git versions are present
SVN r64517 |2019-09-19 16:04:02 +0000

--- a/gradle/settings/all.gradle
+++ b/gradle/settings/all.gradle
@@ -34,6 +34,13 @@ if (hasProperty('excludeExternalModuleDirs'))
 {
     excludedDirs.addAll("${excludeExternalModuleDirs}".toLowerCase().split(","))
 }
+// TODO: remove after labModules git migration
+if (new File(getRootDir(), "server/modules/onprcEHRModules/GenotypeAssays").exists()) {
+    excludedDirs.addAll([
+            "DISCVR",
+            "labModules"
+    ])
+}
 
 BuildUtils.includeModules(this.settings, rootDir, ["server/modules", "server/optionalModules", "externalModules"], excludedDirs, true)
 
