--- a/gradle/settings/ehr.gradle
+++ b/gradle/settings/ehr.gradle
@@ -27,13 +27,26 @@ import org.labkey.gradle.util.BuildUtils
  */
 
 List<String> ehrModulesDirs = [
-        "externalModules/DISCVR",
-        "externalModules/labModules",
         "server/modules/onprcEHRModules",
         "server/modules/ehrModules",
         "externalModules/snprcEHRModules",
         "externalModules/wnprc-modules"
 ]
+
+// TODO: Include by default after labModules git migration
+if (new File(getRootDir(), "server/modules/onprcEHRModules/GenotypeAssays").exists()) {
+    ehrModuleDirs = ehrModuleDirs + [
+            "server/modules/DiscvrLabKeyModules",
+            "server/modules/BimberLabKeyModules",
+            "server/modules/LabDevKitModules"
+    ]
+}
+else {
+    ehrModuleDirs = ehrModuleDirs + [
+            "externalModules/DISCVR",
+            "externalModules/labModules"
+    ]
+}
 
 BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.PLATFORM_MODULES_DIR, BuildUtils.COMMON_ASSAYS_MODULES_DIR], [])
 BuildUtils.includeModules(this.settings, rootDir, ehrModulesDirs, [])
@@ -42,6 +55,7 @@ include ":server:optionalModules:snd"
 include ":server:optionalModules:tnprc_ehr"
 include ":server:optionalModules:tnprc_billing"
 include ":server:optionalModules:dataintegration"
+include ":server:optionalModules:premium"
 
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
 include "${BuildUtils.getTestProjectPath(this.settings.gradle)}:distributions:teamcity"
