Remove placeholders and update paths after Git migration
SVN r64793 |2019-11-26 20:31:09 +0000

--- a/gradle/settings/consolidation.gradle
+++ b/gradle/settings/consolidation.gradle
@@ -1,10 +1,9 @@
 // This module set builds all modules in the following directories:
-// 
-//    /server/customModules
+//
 //    /server/modules
 //    /server/optionalModules
-//    /server/test/modules
-//    
+//    /server/testAutomation/modules
+//
 // Goal is to build all the LabKey modules, skipping most of the modules in externalModules. This module set can be useful when
 // refactoring core code, performing the end-of-release-cycle script consolidation process, updating licenses, etc.
 //
