--- a/settings.gradle
+++ b/settings.gradle
@@ -67,16 +67,11 @@ else
     // Items may be individual module names (e.g. 'luminex') or module container names (e.g. 'customModules')
     List<String> excludedModules = []
 
-    // Some directories in externalModules have a 'test' directory with shared test code.
-    // They should not be included as LabKey modules.
-    List<String> excludedExternalModules = ["test"]
+    // The line below recursively includes all modules in server/modules and server/optionalModules
+    BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR, BuildUtils.OPTIONAL_MODULES_DIR], excludedModules, true)
 
-    // Example excluded external modules for an EHR build
-    //List<String> excludedDISCVRModules = ["CancerStudies", "galaxyintegration", "mGAP", "su2c"]
-    //excludedExternalModules = excludedExternalModules + excludedDISCVRModules
-
-    // The line below includes all modules in the server/modules, server/modules/platform, and server/modules/commonAssays, but not other module containers (e.g. server/modules/customModules)
-    BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR, BuildUtils.PLATFORM_MODULES_DIR, BuildUtils.COMMON_ASSAYS_MODULES_DIR], excludedModules)
+    // The line below includes all modules in server/modules, server/modules/platform, and server/modules/commonAssays, but not other module containers (e.g. server/modules/customModules)
+    //BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR, BuildUtils.PLATFORM_MODULES_DIR, BuildUtils.COMMON_ASSAYS_MODULES_DIR], excludedModules)
 
     // The line below includes all modules in server/modules as well as modules within any module containers there (e.g. server/modules/platform)
     //BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR], excludedModules, true)
@@ -87,12 +82,11 @@ else
     // The line below includes all modules in the server/modules, server/modules/platform, server/modules/commonAssays, server/modules/customModules and server/optionalModules directories
     //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, excludedModules)
 
+    // Example excluded external modules for an EHR build
+
     // The line below includes all modules in the externalModules directory (except the ones indicates as to be excluded)
-    //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EXTERNAL_MODULE_DIRS, excludedExternalModules)
-
-    // The line below includes only the external EHR modules
-    //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EHR_EXTERNAL_MODULE_DIRS, excludedExternalModules)
-
+    //List<String> excludedExternalModules = ["scharp"]
+    //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EXTERNAL_MODULES_DIR, excludedExternalModules)
 
     // The line below includes a set of individual modules (in this case, some EHR related modules)
     //BuildUtils.includeModules(this.settings, [":server:optionalModules:tnprc_ehr",
