--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ plugins {
     id "com.github.node-gradle.node" version "${gradleNodePluginVersion}" apply false
     id "com.jfrog.bintray" version "${bintrayPluginVersion}" apply false
     id "org.owasp.dependencycheck" version "${owaspDependencyCheckPluginVersion}" apply false
+    id "com.moowork.node" version "${mooworkNodePluginVersion}" apply false // restore until we can remove references in wnprc-modules
 //    id "com.github.ben-manes.versions" version "0.25.0"
 }
 
