--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,8 @@ labkeyVersion=20.3-SNAPSHOT
 
 # The current version numbers for the gradle plugins.
 bintrayPluginVersion=1.8.4
-artifactoryPluginVersion=4.13.0
+# reverting to 4.9.8 for the time being as using 4.13.0 may be causing a "Broken pipe" error when publishing from TeamCity
+artifactoryPluginVersion=4.9.8
 gradleNodePluginVersion=2.0.0
 gradlePluginsVersion=1.9.2
 owaspDependencyCheckPluginVersion=5.2.1
